--- a/Easy/Cube.html
+++ b/Easy/Cube.html
@@ -511,10 +511,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 206px; height: 41px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 85px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(-1px, 96px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-1px, 96px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-1px, 96px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-1px, 96px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
@@ -525,6 +525,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
+/*#/#*//*#i4.i280.image.css:image/base/css*/
+#i280 { opacity: 1; }
+/*#/#*//*#i280.i281.positioning.css:positioning/base/css.2*/
+#i280 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 135px; height: 60px;
+        -ms-transform: translate(0, 0) translate(87px, 143px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(87px, 143px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(87px, 143px) rotate(0deg);
+        transform: translate(0, 0) translate(87px, 143px) rotate(0deg);
+}
 /*#/#*//*#i4.i190.image.css:image/base/css*/
 #i190 { opacity: 1; }
 /*#/#*//*#i190.i191.positioning.css:positioning/base/css.2*/
@@ -533,15 +542,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(245px, 201px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(245px, 201px) rotate(0deg);
         transform: translate(0, 0) translate(245px, 201px) rotate(0deg);
-}
-/*#/#*//*#i4.i186.image.css:image/base/css*/
-#i186 { opacity: 1; }
-/*#/#*//*#i186.i187.positioning.css:positioning/base/css.2*/
-#i186 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 152px; height: 68px;
-        -ms-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -571,19 +571,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i58 { opacity: 1; }
 /*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
 #i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
-        -ms-transform: translate(0, 0) translate(-19px, 145px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(-19px, 145px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(-19px, 145px) rotate(0deg);
-        transform: translate(0, 0) translate(-19px, 145px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(-19px, 152px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-19px, 152px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-19px, 152px) rotate(0deg);
+        transform: translate(0, 0) translate(-19px, 152px) rotate(0deg);
 }
 /*#/#*//*#i5.i230.image.css:image/base/css*/
 #i230 { opacity: 1; }
 /*#/#*//*#i230.i231.positioning.css:positioning/base/css.1*/
 #i230 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, -6px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -6px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -6px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -6px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
 /*#/#*//*#cube.css:cube/globalcss.1*/
 
@@ -718,19 +718,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i258 { opacity: 1; }
 /*#/#*//*#i258.i259.positioning.css:positioning/base/css.2*/
 #i258 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 48px; height: 48px;
-        -ms-transform: translate(0, 0) translate(114px, 184px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(114px, 184px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(114px, 184px) rotate(0deg);
-        transform: translate(0, 0) translate(114px, 184px) rotate(0deg);
-}
-/*#/#*//*#i5.i268.image.css:image/base/css*/
-#i268 { opacity: 1; }
-/*#/#*//*#i268.i269.positioning.css:positioning/base/css.2*/
-#i268 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 152px; height: 68px;
-        -ms-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(111px, 186px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(111px, 186px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(111px, 186px) rotate(0deg);
+        transform: translate(0, 0) translate(111px, 186px) rotate(0deg);
 }
 /*#/#*//*#i5.i264.image.css:image/base/css*/
 #i264 { opacity: 1; }
@@ -740,6 +731,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(245px, 201px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(245px, 201px) rotate(0deg);
         transform: translate(0, 0) translate(245px, 201px) rotate(0deg);
+}
+/*#/#*//*#i5.i276.image.css:image/base/css*/
+#i276 { opacity: 1; }
+/*#/#*//*#i276.i277.positioning.css:positioning/base/css.2*/
+#i276 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 135px; height: 60px;
+        -ms-transform: translate(0, 0) translate(89px, 139px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(89px, 139px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(89px, 139px) rotate(0deg);
+        transform: translate(0, 0) translate(89px, 139px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -775,13 +775,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #1d1d1d; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
-#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 236px; height: 52px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 92px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 92px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 92px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 92px) rotate(0deg);
+#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 207px; height: 52px;
+        -ms-transform: translate(-50%, -50%) translate(-6px, 106px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(-6px, 106px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(-6px, 106px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(-6px, 106px) rotate(0deg);
 }
 /*#/#*//*#i6.i266.image.css:image/base/css*/
 #i266 { opacity: 1; }
@@ -795,14 +795,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i272.image.css:image/base/css*/
 #i272 { opacity: 1; }
 /*#/#*//*#i272.i273.positioning.css:positioning/base/css.2*/
-#i272 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 152px; height: 68px;
-        -ms-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
-        transform: translate(0, 0) translate(74px, 126px) rotate(0deg);
+#i272 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 135px; height: 60px;
+        -ms-transform: translate(0, 0) translate(83px, 150px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(83px, 150px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(83px, 150px) rotate(0deg);
+        transform: translate(0, 0) translate(83px, 150px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
-#i99 { background-color: #ffffff; opacity: 0.00;
+#i99 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i179.i180.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i99 { cursor: pointer; }
@@ -837,11 +837,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¡No te pierdas todas estas ofertas para tu hogar!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/Wdr0FhD.png"/>
+<img id="i130" src="https://i.imgur.com/lNEEpb8.jpg"/>
+<!--#/#--><!--#i4.i280.image.html:image/html-->
+<img id="i280" src="https://i.imgur.com/Qfldi1M.png"/>
 <!--#/#--><!--#i4.i190.image.html:image/html-->
 <img id="i190" src="https://i.imgur.com/3aX4YHt.png"/>
-<!--#/#--><!--#i4.i186.image.html:image/html-->
-<img id="i186" src="https://i.imgur.com/Qfldi1M.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -856,10 +856,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i230" src="https://i.imgur.com/hKbxX39.png"/>
 <!--#/#--><!--#i5.i258.image.html:image/html-->
 <img id="i258" src="https://i.imgur.com/KN5P4mj.gif"/>
-<!--#/#--><!--#i5.i268.image.html:image/html-->
-<img id="i268" src="https://i.imgur.com/Qfldi1M.png"/>
 <!--#/#--><!--#i5.i264.image.html:image/html-->
 <img id="i264" src="https://i.imgur.com/3aX4YHt.png"/>
+<!--#/#--><!--#i5.i276.image.html:image/html-->
+<img id="i276" src="https://i.imgur.com/Qfldi1M.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -919,27 +919,27 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 });
 /*#/#*//*#i4.i130.image.js:image/base/js*/
 
-/*#/#*//*#i4.i190.image.js:image/base/js*/
+/*#/#*//*#i4.i280.image.js:image/base/js*/
 
-/*#/#*//*#i190.i191.positioning.js:positioning/base/js.2*/
-bmShow('i190');
-/*#/#*//*#i4.i186.image.js:image/base/js*/
-
-/*#/#*//*#i186.i187.positioning.js:positioning/base/js.2*/
-bmShow('i186');
-/*#/#*//*#i186.i188.actions.js:actions/base/js.1*/
+/*#/#*//*#i280.i281.positioning.js:positioning/base/js.2*/
+bmShow('i280');
+/*#/#*//*#i280.i282.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i186');
+var el = document.getElementById('i280');
 
 el.addEventListener('click', function(e){
-    /*#i188.i189.actions-clicktag.js:actions-clicktag/base/js.2*/
-     
+    /*#i282.i283.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/pJqpVjGrNroktsZ27'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i4.i190.image.js:image/base/js*/
+
+/*#/#*//*#i190.i191.positioning.js:positioning/base/js.2*/
+bmShow('i190');
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
@@ -960,16 +960,20 @@ document.getElementById('i91').addEventListener('click', function(e){
 
 /*#/#*//*#i258.i259.positioning.js:positioning/base/js.2*/
 bmShow('i258');
-/*#/#*//*#i5.i268.image.js:image/base/js*/
+/*#/#*//*#i5.i264.image.js:image/base/js*/
 
-/*#/#*//*#i268.i269.positioning.js:positioning/base/js.2*/
-bmShow('i268');
-/*#/#*//*#i268.i270.actions.js:actions/base/js.1*/
+/*#/#*//*#i264.i265.positioning.js:positioning/base/js.2*/
+bmShow('i264');
+/*#/#*//*#i5.i276.image.js:image/base/js*/
+
+/*#/#*//*#i276.i277.positioning.js:positioning/base/js.2*/
+bmShow('i276');
+/*#/#*//*#i276.i278.actions.js:actions/base/js.1*/
 /* Name: On Click; */
-var el = document.getElementById('i268');
+var el = document.getElementById('i276');
 
 el.addEventListener('click', function(e){
-    /*#i270.i271.actions-clicktag.js:actions-clicktag/base/js.2*/
+    /*#i278.i279.actions-clicktag.js:actions-clicktag/base/js.2*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/pJqpVjGrNroktsZ27'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
@@ -977,10 +981,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i5.i264.image.js:image/base/js*/
-
-/*#/#*//*#i264.i265.positioning.js:positioning/base/js.2*/
-bmShow('i264');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
@@ -1068,15 +1068,15 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i130.i131.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i4.i280.image.meta:image/meta*/
+name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i280.i281.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i190.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i190.i191.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i186.image.meta:image/meta*/
-name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i186.i187.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
@@ -1103,15 +1103,15 @@ name: Locación; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i258.i259.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i268.image.meta:image/meta*/
-name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i268.i269.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i264.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i264.i265.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i276.image.meta:image/meta*/
+name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i276.i277.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
